--- a/about.html
+++ b/about.html
@@ -127,16 +127,7 @@
                 </nav>
             </div>
         </div>
-
-        <!-- Fil d'Ariane -->
-        <div class="display" style="background-color: cyan; width: 100%;">
-            <div class="portfolio">
-                <a href="#">ADW. Home / </a>
-            </div>
-        </div>
-
-
-
+        <!-- Corps de la page about -->
         <main class="adw--about flex--column">
             <aside class="my_id">
                 <article class="my_id--article">
@@ -220,9 +211,7 @@
                             </figure>
                         </div>
                         <p class="texte-norm">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Similique corrupti porro commodi voluptatem optio necessitatibus magnam? Voluptas,
-                            necessitatibus! Magnam, veniam.
+                            Infographiste . Webdesigner . Ux Designer . CMS (WordPress)
                         </p>
                     </section>
 
@@ -233,43 +222,66 @@
 
             <section class="associers">
                 <div class="photo__associers">
-                    <figure class="photo__associer--01">
-                        <img src="images/hut1.png" alt="" class="associer--1" width="100%" height="auto">
-                        <figcaption>Barbara Dupond</figcaption>
+                    <figure class="photo__adw-team flex--column">
+                        <img src="images/adw-team.png" alt="" class="associer--1" width="100%" height="auto">
+                        <figcaption>Notre équipe </figcaption>
                     </figure>
                 </div>
                 <div class="presentation__associer">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Rem sed exercitationem fugiat deserunt natus? Reiciendis ut labore soluta,
-                    deserunt saepe voluptatibus, exercitationem natus praesentium quae error eius delectus autem.
-                    Reprehenderit numquam labore cupiditate voluptates aliquid quaerat repudiandae aut molestias
-                    distinctio?
-                    Illum nihil repellendus eveniet dicta laudantium sed placeat accusantium
-                    quaerat sunt consequuntur odio veritatis,
-                    voluptas dolor debitis cupiditate assumenda veniam voluptatibus unde non alias.
-                    Est, veritatis?
-                    Placeat deleniti nulla culpa officiis laborum, asperiores ducimus, eius,
-                    ipsum modi fugit eum soluta. Fugiat consequuntur esse libero earum facere maxime
-                    quo non et asperiores a. Voluptates laudantium aut laborum, illum eum at veniam sed dicta.
-                    Maxime, fugit quas. Tenetur labore impedit quis numquam,
-                    quam recusandae corrupti porro dolorem voluptas quae!
-                    Amet ab adipisci ipsam nam dignissimos cumque facilis et laborum placeat explicabo,
-                    voluptatem aliquid distinctio unde molestiae inventore architecto necessitatibus
-                    culpa mollitia iure. Ullam sit maxime
-                    quos rerum provident id ad consequuntur assumenda eos iure
-                    quisquam quas iusto distinctio est quo adipisci ipsum a commodi earum autem,
-                    velit dolore! Odit voluptatum ipsam doloremque aperiam cupiditate ducimus quasi!
-                    Repellat illo totam consequatur,
-                    libero maxime molestiae vel ratione veritatis sapiente quos,
-                    rem vitae harum ducimus cumque!
-                    Harum ut temporibus quae. Libero ex quisquam veritatis iusto.
+                    <h2>La présentation de notre équipe</h2>
+
+                    <h3>La communication</h3>
+                    <p> 
+
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Rem sed exercitationem fugiat deserunt natus? Reiciendis ut labore soluta,
+                        deserunt saepe voluptatibus, exercitationem natus praesentium quae error eius delectus autem.
+                        Reprehenderit numquam labore cupiditate voluptates aliquid quaerat repudiandae aut molestias
+                        distinctio?
+                    </p>
+                    <h3>Notre travail </h3>
+                    <p> 
+                        Placeat deleniti nulla culpa officiis laborum, asperiores ducimus, eius,
+                        ipsum modi fugit eum soluta. Fugiat consequuntur esse libero earum facere maxime
+                        quo non et asperiores a. Voluptates laudantium aut laborum, illum eum at veniam sed dicta.
+                        Maxime, fugit quas. Tenetur labore impedit quis numquam,
+                        quam recusandae corrupti porro dolorem voluptas quae!
+                    </p>
+                    <h3>Conclusion</h3>
+                    <p> 
+
+                        Amet ab adipisci ipsam nam dignissimos cumque facilis et laborum placeat explicabo,
+                        voluptatem aliquid distinctio unde molestiae inventore architecto necessitatibus
+                        culpa mollitia iure. Ullam sit maxime
+                        quos rerum provident id ad consequuntur assumenda eos iure
+                        quisquam quas iusto distinctio est quo adipisci ipsum a commodi earum autem,
+                        velit dolore! Odit voluptatum ipsam doloremque aperiam cupiditate ducimus quasi!
+                    </p>
                 </div>
-                <figure class="travail__associer">
-                    <img src="images/hut1.png" alt="" class="associer__activiter" width="100%" height="auto">
-                    <figcaption>
-                        Responsable de marketing digital
-                    </figcaption>
-                </figure>
+                <div class="associer__responsabilites flex--row">
+                    <figure class="travail__associer">
+                        <img src="images/adw-infographiste.png" alt="" class="associer__activiter" width="100%" height="auto">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                            Molestias atque ea facere accusantium ratione corrupti.
+                        </p>
+                    </figure>
+                    <hr>
+                    <figure class="travail__associer">
+                        <img src="images/adw-devwebSenor.png" alt="" class="associer__activiter" width="100%" height="auto">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                            Molestias atque ea facere accusantium ratione corrupti.
+                        </p>
+                    </figure>
+                    <figure class="travail__associer">
+                        <img src="images/adw-webDesigner.png" alt="" class="associer__activiter" width="100%" height="auto">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                            Molestias atque ea facere accusantium ratione corrupti.
+                        </p>
+                    </figure>
+                </div>
             </section>
         </main>
 
