--- a/photometrie.html
+++ b/photometrie.html
@@ -275,53 +275,43 @@
             </div>
         </div>
 
-        <!-- Fil d'Ariane -->
-        <div class="display" style="background-color: cyan; width: 100%;">
-            <div class="portfolio">
-                <a href="#">ADW. Home / </a>
-            </div>
-        </div>
-
-		<main>
+		<main class="photo">
 			<div class="appareil__photo">
 				<section class="appareil--section"></section>
-				<aside></aside>
+				<aside class="flash--appareil"></aside>
 			</div>
 
 			<div class="photo__retouche flex--row">
 				<!-- Fênetres -->
 				<section class="sect-1">
-					<article class="sect-1__art-1">
-                        <figure class="carte">
+					<article class="sect-1__art">
+                        <figure>
                             <img src="realisation/imgPhotoshopADW/retouchePhoto/tatouage.jpg" alt="">
-                            <figcaption></figcaption>
                         </figure>
                     </article>
-					<article class="sect-1__art-2">
-                        <figure class="carte">
+					<article class="sect-1__art">
+                        <figure>
                             <img src="realisation/imgPhotoshopADW/retouchePhoto/tatouageOutilCorrectionLocalise.jpg" alt="">
-                            <figcaption></figcaption>
                         </figure>
                     </article>
 				</section>
 
 				<section class="sect-2 flex--column">
 					<div class="sect-2__ecran">
-                        <figure class="carte1">
+                        <figure>
                             <img src="realisation/imgPhotoshopADW/retouchePhoto/langueDeVipere.jpg" alt="">
-                            <figcaption></figcaption>
                         </figure>
 					</div>
 
 					<div class="sect-2__articles">
 						<article class="sect-2__art-1">
-                            <figure class="carte">
+                            <figure>
                                 <img src="realisation/imgPhotoshopADW/retouchePhoto/retouchtips_preview.jpg" alt="">
                                 <figcaption></figcaption>
                             </figure>
                         </article>
 						<article class="sect-2__art-2">
-                            <figure class="carte">
+                            <figur>
                                 <img src="realisation/imgPhotoshopADW/retouchePhoto/snake-4180800_1280.jpg" alt="">
                                 <figcaption></figcaption>
                             </figure>
@@ -329,11 +319,12 @@
 					</div>
 				</section>
 			</div>
+
 			<div class="photo__retouche">
 				<!-- Fênetres -->
 				<section class="sect-2 flex--column">
 					<div class="sect-2__ecran">
-                        <figure class="carte1">
+                        <figure>
                             <img src="realisation/imgPhotoshopADW/retouchePhoto/OutilSelection.jpg" alt="">
                             <figcaption></figcaption>
                         </figure>
@@ -341,13 +332,13 @@
 
 					<div class="sect-2__articles">
 						<article class="sect-2__art-1">
-                            <figure class="carte">
+                            <figure>
                                 <img src="realisation/imgPhotoshopADW/retouchePhoto/ImagePourDetourage.jpg" alt="">
                                 <figcaption></figcaption>
                             </figure>
                         </article>
 						<article class="sect-2__art-2">
-                            <figure class="carte">
+                            <figure>
                                 <img src="realisation/imgPhotoshopADW/retouchePhoto/pexels-magda-ehlers-1771748.jpg" alt="">
                                 <figcaption></figcaption>
                             </figure>
@@ -356,13 +347,13 @@
 				</section>
 
 				<section class="sect-1">
-					<article class="sect-1__art-1">
+					<article class="sect-1__art">
                         <figure class="carte">
                             <img src="realisation/imgPhotoshopADW/retouchePhoto/cicatrice-jambe.jpg" alt="">
                             <figcaption></figcaption>
                         </figure>
                     </article>
-					<article class="sect-1__art-2">
+					<article class="sect-1__art">
                         <figure class="carte">
                             <img src="realisation/imgPhotoshopADW/retouchePhoto/cicatrice-jambeCorrecteursEtLocalise01.jpg" alt="">
                             <figcaption></figcaption>
@@ -374,14 +365,14 @@
             <div class="photo__retouche flex--row">
 				<!-- Fênetres -->
 				<section class="sect-1">
-					<article class="sect-1__art-1">
-                        <figure class="carte">
+					<article class="sect-1__art">
+                        <figure>
                             <img src="realisation/imgPhotoshopADW/retouchePhoto/fille-plage.jpg" alt="">
                             <figcaption></figcaption>
                         </figure>
                     </article>
-					<article class="sect-1__art-2">
-                        <figure class="carte">
+					<article class="sect-1__art">
+                        <figure>
                             <img src="realisation/imgPhotoshopADW/retouchePhoto/fille-plageTampon.jpg" alt="">
                             <figcaption></figcaption>
                         </figure>
@@ -390,7 +381,7 @@
 
 				<section class="sect-2 flex--column">
 					<div class="sect-2__ecran">
-                        <figure class="carte1">
+                        <figure>
                             <img src="realisation/imgPhotoshopADW/retouchePhoto/AlienFille.jpg" alt="">
                             <figcaption></figcaption>
                         </figure>
@@ -398,13 +389,13 @@
 
 					<div class="sect-2__articles">
 						<article class="sect-2__art-1">
-                            <figure class="carte">
+                            <figur>
                                 <img src="realisation/imgPhotoshopADW/retouchePhoto/609f4f629998bd5a1a9680257973c096.jpg" alt="">
                                 <figcaption></figcaption>
                             </figure>
                         </article>
 						<article class="sect-2__art-2">
-                            <figure class="carte">
+                            <figure>
                                 <img src="realisation/imgPhotoshopADW/retouchePhoto/alien-560710_1280.webp" alt="">
                                 <figcaption></figcaption>
                             </figure>
@@ -412,11 +403,12 @@
 					</div>
 				</section>
 			</div>
+
 			<div class="photo__retouche">
 				<!-- Fênetres -->
 				<section class="sect-2 flex--column">
 					<div class="sect-2__ecran">
-                        <figure class="carte1">
+                        <figure>
                             <img src="realisation/imgPhotoshopADW/retouchePhoto/a" alt="">
                             <figcaption></figcaption>
                         </figure>
@@ -424,13 +416,13 @@
 
 					<div class="sect-2__articles">
 						<article class="sect-2__art-1">
-                            <figure class="carte">
+                            <figure>
                                 <img src="realisation/imgPhotoshopADW/retouchePhoto/" alt="">
                                 <figcaption></figcaption>
                             </figure>
                         </article>
 						<article class="sect-2__art-2">
-                            <figure class="carte">
+                            <figure>
                                 <img src="realisation/imgPhotoshopADW/retouchePhoto/" alt="">
                                 <figcaption></figcaption>
                             </figure>
@@ -439,63 +431,60 @@
 				</section>
 
 				<section class="sect-1">
-					<article class="sect-1__art-1">
-                        <figure class="carte">
+					<article class="sect-1__art">
+                        <figure>
                             <img src="realisation/imgPhotoshopADW/retouchePhoto/boutons.jpg" alt="">
                             <figcaption></figcaption>
                         </figure>
                     </article>
-					<article class="sect-1__art-2">
-                        <figure class="carte">
+					<article class="sect-1__art">
+                        <figure>
                             <img src="realisation/imgPhotoshopADW/retouchePhoto/boutonsOutilCorrecteur01X.jpg" alt="">
                             <figcaption></figcaption>
                         </figure>
                     </article>
 				</section>
 			</div>
+
              <!-- Gif -->
             <div class="img--gif flex--row">
    
                 <article class="art-kleuren">
                     <section class="gris">
-                        <figure class="carte">
+                        <figure>
                             <img src="realisation/imgPhotoshopADW/gif/intro01.gif" alt="">
-                            <figcaption></figcaption>
                         </figure>
                     </section>
                     <section class="noir">
                     </section>
                 </article>
 
-                
                 <article class="art-kleuren">
                     <section class="gris">
-                        <figure class="carte">
+                        <figure>
                             <img src="realisation/imgPhotoshopADW/gif/petitpoisson.gif" alt="">
-                            <figcaption></figcaption>
                         </figure>
                     </section>
                     <section class="noir">
                     </section>
                 </article>
-                <article class="art-kleuren">
-                    <section class="gris">
-                        <figure class="carte">
-                            <img src="realisation/imgPhotoshopADW/gif/photo-restauration02.gif" alt="">
-                            <figcaption></figcaption>
-                        </figure>
-                    </section>
-                    <section class="noir">
-                    </section>
-                </article>
-                <article class="art-kleuren">
-                    <section class="gris">
-                        <figure class="carte">
-                            <img src="realisation/imgPhotoshopADW/gif/rueOmdre01.gif" alt="">
-                            <figcaption></figcaption>
-                        </figure>
-                    </section>
 
+                <article class="art-kleuren">
+                    <section class="gris">
+                        <figure>
+                            <img src="realisation/imgPhotoshopADW/gif/photo-restauration02.gif" alt="">
+                        </figure>
+                    </section>
+                    <section class="noir">
+                    </section>
+                </article>
+
+                <article class="art-kleuren">
+                    <section class="gris">
+                        <figure>
+                            <img src="realisation/imgPhotoshopADW/gif/rueOmdre01.gif" alt="">
+                        </figure>
+                    </section>
                     <section class="noir">
                     </section>
                 </article>
